<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:layout_height="fill_parent"
 >

	<LinearLayout
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="50dp"
    	>
		<Button
       		android:id="@+id/register_button"
        	android:layout_width="wrap_content"
        	android:layout_height="fill_parent"
        	android:text="@string/register_button" />

    	<EditText
    	    android:id="@+id/nameText"
    	    android:layout_width="match_parent"
    	    android:layout_height="fill_parent"
    	    android:inputType="text"
    	    android:text="@string/name_string" />
	
	</LinearLayout>
	
	<LinearLayout
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="60dp"
    	>
		<Button
       		android:id="@+id/refresh_button"
        	android:layout_width="75dp"
        	android:layout_height="fill_parent"
        	android:text="@string/refresh_string" />
		<Button
       		android:id="@+id/get_file_button"
        	android:layout_width="75dp"
        	android:layout_height="fill_parent"
        	android:text="@string/get_file_many" />
		
		<Spinner android:id="@+id/device_spinner"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"/>

	 </LinearLayout>
	
	<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/log_string"
    />
    <TextView android:id="@+id/log_text"
              android:layout_width="fill_parent"
              android:layout_height="match_parent"
              android:text="" />

</LinearLayout>
